# ai-zombie-defense

./: .dockerignore  .gitignore  .ignore  AGENTS.md  Cargo.toml  README.md  biome.jsonc  go.work  go.work.sum  package.json  pyproject.toml
.husky/: pre-commit
apps/backend-api/: AGENTS.md  data.db  go.mod  go.sum  sqlc.yaml
apps/backend-api/db/: AGENTS.md  db.go  sqlc.yaml  sqlc.yaml.bak
apps/backend-api/migrations/: 20260122105147_players.sql  20260122105148_sessions.sql  20260122105149_player_progression.sql  20260122105153_loadouts.sql  20260122105155_servers.sql  20260122105157_player_match_stats.sql  20260122105159_friends.sql  20260122105160_server_favorites.sql  20260122174842_servers_add_auth_token.sql  20260122184336_join_tokens.sql  20260122230000_players_add_is_admin.sql
apps/game/: icon.svg.import  project.godot
docs/: game-loop.md  prd.md
docs/c4/: container.puml  context.puml
docs/sequence-diagrams/: us001-sequence.puml  us002-sequence.puml  us003-sequence.puml  us004-sequence.puml  us005-sequence.puml  us006-sequence.puml  us007-sequence.puml  us008-sequence.puml  us009-sequence.puml
docs/user-stories/: _template.md  us001.md  us002.md  us003.md  us004.md  us005.md  us006.md  us007.md  us008.md  us009.md
infra/backend-api/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: count-lines.ts  task.ts
scripts/ralph/: .last-branch  CLAUDE.md  OPENCODE.md  prd.json  prd.json.backup  progress.txt  prompt.md  ralph.sh
tasks/: prd-backend-refactor.md  prd-flatten-db-structure.md  prd-go-backend-refactor-v2.md  prd-refactor-go-backend.md
(+132 files in other folders)
